# s3c_cbc

./: .gitignore
01_people_detection/: Dockerfile  README.md  install.md  ros_entrypoint.sh  run.sh
01_people_detection/people_detection/people_detection/: CMakeLists.txt  package.xml
01_people_detection/people_detection/people_detection/yolov7/: deploy.py  people_detection.py  requirements.txt  test_gstreamer_pipeline.py
01_people_detection/people_detection/rslidar_sdk/config/: config.yaml
01_people_detection/people_detection/rslidar_sdk/launch/: pointcloud_to_laserscan.launch  scan_distance.launch  start.launch
01_people_detection/people_detection/rslidar_sdk/meshes/: e46_lock.STL
01_people_detection/people_detection/rslidar_sdk/node/: circular_filter.py  scan_distance_node.py  (+2 more)
02_part_detection/: Dockerfile  README.md  aica-package.toml  docker-compose.yml  integration.md  run.sh
02_part_detection/doc/: notes_12_06_24  part_detection_relative_coordinates.odt
02_part_detection/src/part_detection_interfaces/: CMakeLists.txt  package.xml
02_part_detection/src/part_detection_pkg/: package.xml  setup.cfg  setup.py
02_part_detection/src/s3c_part_detection/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg
02_part_detection/src/s3c_part_detection/component_descriptions/: auto_frame_calibration_robot_camera_calibration.json
02_part_detection/src/s3c_part_detection/s3c_part_detection/: detector.py  part_detection_logic.py  part_detector.py
02_part_detection/src/test-scripts/: move_robot.py  move_robot_node.py  positions.ipynb
(+669 files in other folders)
